# wasmtime-ng

./: .gitignore  LICENSE  README.md  pom.xml
.github/: dependabot.yml
.github/workflows/: maven.yml
src/main/java/io/github/stefanrichterhuber/wasmtimejavang/: AbstractWasmtimeMemory.java  ComponentContextLookup.java  RegistryComponentContextLookup.java  ResourceDestructor.java  SemanticVersion.java  ServiceLoaderComponentContextLookup.java  (+20 more)
src/main/rust/wasmtime-binding/: Cargo.toml
src/main/rust/wasmtime-binding/src/: java_maps.rs  java_numbers.rs  lib.rs  logging.rs  wasmcomponentinstance.rs  wasmcomponentvalue.rs  wasmcontext.rs  wasmengine.rs  wasmexception.rs  wasminstance.rs  wasmlinker.rs  wasmmemory.rs  wasmmodule.rs  wasmsharedmemory.rs  wasmstore.rs  wasmtime_v128.rs  wasmtimefunc.rs  wasmtimefuncref.rs  wasmtimefunction.rs
src/test/resources/: junit-platform.properties  log4j2.xml
src/test/rust/valuetest/src/: main.rs
src/test/rust/wasip1filetest/src/: main.rs
src/test/rust/wasip1sockettest/: Cargo.toml
src/test/rust/wasip1sockettest/src/: main.rs
src/test/rust/wasip1test/: Cargo.toml
src/test/rust/wasip1test/src/: main.rs
src/test/rust/wasip1threadtest/: Cargo.toml
src/test/rust/wasip1threadtest/src/: lib.rs  main.rs
src/test/rust/wasip1vfstest/: Cargo.toml
src/test/rust/wasip1vfstest/src/: main.rs
src/test/rust/wasip2clitest/: Cargo.toml
src/test/rust/wasip2clitest/src/: main.rs
src/test/rust/wasip2customtest/: Cargo.toml
src/test/rust/wasip2customtest/src/: main.rs
src/test/rust/wasip2customtest/wit/: world.wit
src/test/rust/wasip2randomtest/: Cargo.toml
src/test/rust/wasip2randomtest/src/: main.rs
src/test/rust/wasip2test/: Cargo.toml
wasmtimejavang/: pom.xml
wasmtimejavang-wasi-cli/: pom.xml
wasmtimejavang-wasi-cli/src/main/wit/wasi-cli/: world.wit
wasmtimejavang-wasi-clocks/: pom.xml
wasmtimejavang-wasi-filesystem/: pom.xml
wasmtimejavang-wasi-filesystem/src/test/rust/wasip2filetest/: Cargo.toml
wasmtimejavang-wasi-filesystem/src/test/rust/wasip2filetest/src/: main.rs
wasmtimejavang-wasi-http/: pom.xml
wasmtimejavang-wasi-http/src/test/rust/wasip2httptest/src/: main.rs
wasmtimejavang-wasi-io/: pom.xml
wasmtimejavang-wasi-random/: pom.xml
wasmtimejavang-wasi-sockets/: pom.xml
wasmtimejavang-wasi-sockets/src/test/rust/wasip2sockettest/src/: main.rs
wasmtimejavang/src/main/rust/wasmtime-binding/src/: java_collections.rs  wasmcomponent.rs  wasmcomponentlinker.rs  wasmmemory.rs  wasmstore.rs  wasmtime_v128.rs  wasmtime_valtype.rs
wasmtimejavang/src/test/rust/valuetest/: Cargo.toml
wasmtimejavang/src/test/rust/wasip1filetest/: Cargo.toml
wasmtimejavang/src/test/rust/wasip1test/src/: main.rs
wasmtimejavang/src/test/rust/wasip1threadtest/: Cargo.toml
wasmtimejavang/src/test/rust/wasip1threadtest/src/: main.rs
wasmtimejavang/src/test/rust/wasip2httptest/: Cargo.toml
wasmtimejavang/src/test/rust/wasip2sockettest/: Cargo.toml
wit-codegen-maven-plugin/: pom.xml
wit-codegen-maven-plugin/src/test/resources/wit/: greet.wit
wit-parser/: pom.xml
wit-parser/src/main/rust/wit-parser-binding/: Cargo.toml
wit-parser/src/main/rust/wit-parser-binding/src/: lib.rs
(+121 files in other folders)
