[package]
name = "wasmtime-binding"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow LLVM to optimize more aggressively across the whole crate
panic = 'abort'     # Removes stack unwinding code (saves a lot of space)

[lib]
name = "wasmtimebinding"
crate-type = ["cdylib"]

[dependencies]
wasmtime = "42.0.1"
jni = { version = "0.22" }
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
# Invocation feature is necessary for tests to spin up a VM
jni = { version = "0.22", features = ["invocation"] }