[package]
name = "wasmtime-binding"
version = "2.0.2"
edition = "2024"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow LLVM to optimize more aggressively across the whole crate
panic = 'abort'     # Removes stack unwinding code (saves a lot of space)

[lib]
name = "wasmtimebinding"
crate-type = ["cdylib"]

[dependencies]
wasmtime = { version = "46.0.1" }
jni = { version = "0.22" }
log = { version = "0.4.33", features = ["std"] }

[dev-dependencies]
# Invocation feature is necessary for tests to spin up a VM
jni = { version = "0.22", features = ["invocation"] }