[package]
name = "wasip2customtest"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = "0.59.0"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow LLVM to optimize more aggressively across the whole crate
panic = 'abort'     # Removes stack unwinding code (saves a lot of space)
