[package]
name = "wasip2randomtest"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.2" }

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow LLVM to optimize more aggressively across the whole crate
panic = 'abort'     # Removes stack unwinding code (saves a lot of space)
